* $wgHtml5 is no longer used by core. Setting it to false will no longer disable HTML5.
  It is still set to true for extension compatibility but doing so in extensions is deprecated.
* $wgXhtmlDefaultNamespace is no longer used by core. Setting it will no longer change the
  xmlns used by MediaWiki. Reliance on this variable by extensions is deprecated.
* $wgHandheldStyle was removed.
* $wgJsMimeType is no longer used by core. Most usage has been removed since
  HTML output is now exclusively HTML5.
* $wgDBOracleDRCP added. True enables persistent connection with DRCP on Oracle.
* $wgLogAutopatrol added to allow disabling logging of autopatrol edits in the logging table.
  default for $wgLogAutopatrol is true.

=== New features in 1.22 ===
* (bug 44525) mediawiki.jqueryMsg can now parse (whitelisted) HTML elements and attributes.
* (bug 33454) Language::sprintfDate now has a timezone parameter, and supports
  the "eIOPTZ" formatting characters.
* EditWarning: A warning is shown when an editor leaves the edit form without
  saving (enabled by default, users can opt-out via the 'useeditwarning'
  preference). This feature was moved from the Vector extension, and is now part
  of core for all skins. Take care when upgrading that you don't use an older
  version of the Vector extension as this feature may conflict.
* New 'mediawiki.ui' CSS module providing mw-ui-* styles for buttons and a
  compact vertical form layout.
* New versions of login (Special:UserLogin) and create account
  (Special:UserLogin/signup) forms. They are opt-in for now, controlled by
  the $wgUseVFormUserLogin and $wgUseVFormCreateAccount settings or a 'useNew'
  URL parameter trigger.
* (bug 23343) Implemented ability to apply IP blocks to the contents of X-Forwarded-For headers
  by adding a new configuration variable $wgApplyIpBlocksToXff (disabled by default).
* The new hook 'APIGetPossibleErrors' to modify the list of possible errors was
  added.